@@ -296,10 +296,21 @@ CONTROL;
 			$wgOut->addWikitext( wfMsg( 'missingarticle', "<nowiki>(fixme, bug)</nowiki>" ) );
 			return false;
 		} else {
-			$wgOut->addStyle( 'common/diff.css' );
+			$this->showDiffStyle();
 			$wgOut->addHTML( $diff );
 			return true;
 		}
+	}
+	
+	/**
+	 * Add style sheets and supporting JS for diff display.
+	 */
+	function showDiffStyle() {
+		global $wgStylePath, $wgStyleVersion, $wgOut;
+		$wgOut->addStyle( 'common/diff.css' );
+		
+		// JS is needed to detect old versions of Mozilla to work around an annoyance bug.
+		$wgOut->addScript( "<script type=\"text/javascript\" src=\"$wgStylePath/common/diff.js?$wgStyleVersion\"></script>" );
 	}
 
 	/**
